src/handle_commands/load_pipeline/snapshots/crust_boot_you__handle_commands__load_pipeline__init_validation__testing__detect_name_conflict.snap
---
source: src/handle_commands/load_pipeline/init_validation.rs
expression: actual
---
Conflict("/some/target/a")
