src/handle_commands/load_pipeline/snapshots/crust_boot_you__handle_commands__load_pipeline__init_validation__testing__produce_set_from_uniques_paths.snap
---
source: src/handle_commands/load_pipeline/init_validation.rs
expression: actual
---
[
  NodeEntryMeta(
    node_type: File,
    source_path: "/some/target/",
  ),
  NodeEntryMeta(
    node_type: File,
    source_path: "/some/target/a",
  ),
  NodeEntryMeta(
    node_type: File,
    source_path: "/some/target/b",
  ),
  NodeEntryMeta(
    node_type: File,
    source_path: "/some/target/cccc/zzz",
  ),
]
