src/handle_commands/load_pipeline/snapshots/crust_boot_you__handle_commands__load_pipeline__init_validation__testing__return_for_purge.snap
---
source: src/handle_commands/load_pipeline/init_validation.rs
expression: actual
---
Purge([
  SourceTargetNode(
    source_node: NodeEntryMeta(
      node_type: File,
      source_path: "/some/source/a",
    ),
    target: "/some/target/a",
  ),
  SourceTargetNode(
    source_node: NodeEntryMeta(
      node_type: File,
      source_path: "/some/source/b",
    ),
    target: "/some/target/b",
  ),
])
